# BoneHub-Dataset

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: deploy-webpage.yml
bonehub_data_schema/: __init__.py  bonehub_dataset_io.py  dataset_info.py  labelmap.py  subject_info.py
bonehub_dataset_converter/: __init__.py  base_io.py  utils.py
bonehub_dataset_converter/custom_dataset_io/: __init__.py  acrin_6664.py  bonedat.py  ctpel.py  ctpelvic1k.py  enhance_pet.py  kits2023.py  pengwin.py  spine_mets_ct_seg.py  totalsegmentator_ct.py  vsd_reconstruction.py  vsd_reconstruction_dataset.py
bonehub_dataset_convertor/: __init__.py  base_io.py  utils.py
bonehub_dataset_convertor/custom_dataset_io/: __init__.py  acrin_6664.py  bonedat.py  kits2023.py  spine_mets_ct_seg.py
bonehub_segmentation/: __init__.py  constants.py  evaluation.py  inference.py  training.py  utils.py  visualization.py
bonehub_segmentation/data_loaders/: __init__.py  base.py  standard_loader.py
bonehub_segmentation/dataset_integrator/: __init__.py  base.py  export_dataset.py
bonehub_segmentation/dataset_io/: __init__.py  base.py  bonehub_dataset_reader.py  export_custom_dataset_to_bonehub_format.py  utils.py
bonehub_segmentation/model_wrappers/: __init__.py  base.py  (+2 more)
configs/: inference_config.yaml  model_config.yaml  project_config.yaml  training_config.yaml
examples/: 01_custom_dataloader.py  02_train_custom_model.py  03_use_moose.py  04_use_totalsegmentator.py  05_infer_custom_model.py  06_compare_models.py  07_use_kits_loader.py
tests/: .gitignore  test_convert_read_datasets.py  test_data_schema.py  test_imports.py
webpage/: app.js  config.ini  data.js  index.html  overview.js  styles.css  update_data.py
(+17 files in other folders)
