[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bonehub-dataset"
version = "0.1.0"
description = "A Python package for generating the BoneHub Dataset, including data schema, dataset conversion, segmentation tools, and more."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Hamid Alavi"}
]
dependencies = [
    "numpy==1.26.4",
    "pydicom==2.4.4",
    "pydicom-seg==0.4.1",
    "monai",
    "torch",
    "torchvision",
    "nibabel",  
    "pandas",
    "openpyxl",
]

[tool.setuptools]
packages = [
    "bonehub_data_schema",
    "bonehub_dataset_convertor",
    "bonehub_segmentation",
]
